tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP56ErrorReportingTests#createFile(String).mjava
	protected static IFile createFile(String data) throws Exception {
		IFile testFile = project.getFile("test" + (++count) + ".php");
		testFile.create(new ByteArrayInputStream(data.getBytes()), true, null);
		return testFile;
	}

